--- a/02-project-pandas-real-state (1).ipynb
+++ b/02-project-pandas-real-state (1).ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "frank-heath",
    "metadata": {
     "ExecuteTime": {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "82e7dea53f252c1c",
    "metadata": {
     "ExecuteTime": {
@@ -436,7 +436,7 @@
        "[15335 rows x 37 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "42b8e32c",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "'La casa más cara se encuentra en la dirección: El Escorial y su precio es 8500000 €'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,25 +525,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "lovely-oasis",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'La casa más barata se encuentra en la dirección: Parla y su precio es 0 €'"
+       "'La casa más barata se encuentra en la dirección: Parla y su precio es Unnamed: 0                                                        367\\nid_realEstates                                              153637952\\nisNew                                                           False\\nrealEstate_name                                                esalje\\nphone_realEstate                                          912786497.0\\nurl_inmueble        https://www.fotocasa.es/es/comprar/vivienda/ma...\\nrooms                                                             4.0\\nbathrooms                                                         4.0\\nsurface                                                         262.0\\nprice                                                               0\\ndate                                      2019-12-28T18:52:25.965658Z\\ndescription         ESALJE vende amplio pareado de 268 m2. distrib...\\naddress                                                         Parla\\ncountry                                                        España\\nlevel1                                                         Madrid\\nlevel2                                                         Madrid\\nlevel3                                             Zona Sur de Madrid\\nlevel4                                                 Parla, Zona de\\nlevel5                                                          Parla\\nlevel6                                                            NaN\\nlevel7                                          Fuentebella - El Nido\\nlevel8                                                            NaN\\nupperLevel                                      Fuentebella - El Nido\\ncountryId                                                           0\\nlevel1Id                                                            0\\nlevel2Id                                                            0\\nlevel3Id                                                            0\\nlevel4Id                                                            0\\nlevel5Id                                                            0\\nlevel6Id                                                            0\\nlevel7Id                                                            0\\nlevel8Id                                                            0\\naccuracy                                                            0\\nlatitude                                                     40,23202\\nlongitude                                                    -3,78132\\nzipCode                                                           NaN\\ncustomZone                                                        NaN\\nName: 366, dtype: object €'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "min_price_house = df['price'].min()\n",
-    "address_price_house = df.loc[df['price'].idxmin(), 'address']\n",
-    "f'La casa más barata se encuentra en la dirección: {address_price_house} y su precio es {min_price_house} €'\n"
+    "\n",
+    "min_price_house = df.loc[df['price'].idxmin()]\n",
+    "f'La casa más barata se encuentra en la dirección: {min_price_house[\"address\"]} y su precio es {min_price_house} €'\n"
    ]
   },
   {
@@ -561,25 +561,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "f73938ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'La direccion de la casa mas grande es: Sevilla la Nueva y su tamaño es: 249000.0'"
+       "'La direccion de la casa mas grande es: Sevilla la Nueva y su tamaño es: Unnamed: 0                                                       6795\\nid_realEstates                                              153936192\\nisNew                                                           False\\nrealEstate_name                               habitarium inmobiliaria\\nphone_realEstate                                          916357732.0\\nurl_inmueble        https://www.fotocasa.es/es/comprar/vivienda/ma...\\nrooms                                                             3.0\\nbathrooms                                                         2.0\\nsurface                                                      249000.0\\nprice                                                          289000\\ndate                                             2019-12-25T18:30:00Z\\ndescription         Zona Centro. Chalet pareado de esquina de 249m...\\naddress                                              Sevilla la Nueva\\ncountry                                                        España\\nlevel1                                                         Madrid\\nlevel2                                                         Madrid\\nlevel3                                                  Zona Suroeste\\nlevel4                                      Sevilla la Nueva, Zona de\\nlevel5                                               Sevilla la Nueva\\nlevel6                                                            NaN\\nlevel7                                                            NaN\\nlevel8                                                            NaN\\nupperLevel                                           Sevilla la Nueva\\ncountryId                                                           0\\nlevel1Id                                                            0\\nlevel2Id                                                            0\\nlevel3Id                                                            0\\nlevel4Id                                                            0\\nlevel5Id                                                            0\\nlevel6Id                                                            0\\nlevel7Id                                                            0\\nlevel8Id                                                            0\\naccuracy                                                            0\\nlatitude                                                     40,34633\\nlongitude                                                    -4,02174\\nzipCode                                                           NaN\\ncustomZone                                                        NaN\\nName: 6794, dtype: object'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "surface_big_house = df['surface'].max()\n",
-    "address_bighouse = df.loc[df['surface'].idxmax(), 'address']\n",
-    "f'La direccion de la casa mas grande es: {address_bighouse} y su tamaño es: {surface_big_house}'"
+    "\n",
+    "surface_bighouse = df.loc[df['surface'].idxmax()]\n",
+    "f'La direccion de la casa mas grande es: {surface_bighouse[\"address\"]} y su tamaño es: {surface_bighouse}'"
    ]
   },
   {
@@ -1100,23 +1100,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "dd8aec62c12bd8db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "168"
+       "level5\n",
+       " Madrid Capital         6643\n",
+       "Alcalá de Henares        525\n",
+       "Las Rozas de Madrid      383\n",
+       "Móstoles                 325\n",
+       "Getafe                   290\n",
+       "                        ... \n",
+       "Fresno de Torote           1\n",
+       "Pinilla del Valle          1\n",
+       "Rascafría                  1\n",
+       "La Hiruela                 1\n",
+       "Montejo de la Sierra       1\n",
+       "Name: count, Length: 168, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['level5'].nunique()"
+    "df['level5'].value_counts()"
    ]
   },
   {
@@ -1131,35 +1143,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1454ad464d3f1dfe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "('price', 'level5')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.11/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: ('price', 'level5')",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m level5_arroyo = df[\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mprice\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mlevel5\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m == \u001b[33m'\u001b[39m\u001b[33mArroyomolinos (Madrid)\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m#df.loc[df['level5'] == 'Arroyomolinos', 'price']\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#sum_price = df.loc[df['level5'] == 'Arroyomolinos (Madrid)'].sum\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.11/site-packages/pandas/core/frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4112\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4115\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.11/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: ('price', 'level5')"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id_realEstates</th>\n",
+       "      <th>isNew</th>\n",
+       "      <th>realEstate_name</th>\n",
+       "      <th>phone_realEstate</th>\n",
+       "      <th>url_inmueble</th>\n",
+       "      <th>rooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>surface</th>\n",
+       "      <th>price</th>\n",
+       "      <th>...</th>\n",
+       "      <th>level4Id</th>\n",
+       "      <th>level5Id</th>\n",
+       "      <th>level6Id</th>\n",
+       "      <th>level7Id</th>\n",
+       "      <th>level8Id</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>zipCode</th>\n",
+       "      <th>customZone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Unnamed: 0, id_realEstates, isNew, realEstate_name, phone_realEstate, url_inmueble, rooms, bathrooms, surface, price, date, description, address, country, level1, level2, level3, level4, level5, level6, level7, level8, upperLevel, countryId, level1Id, level2Id, level3Id, level4Id, level5Id, level6Id, level7Id, level8Id, accuracy, latitude, longitude, zipCode, customZone]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "level5_arroyo = df[df['price','level5'] == 'Arroyomolinos (Madrid)']\n",
-    "#df.loc[df['level5'] == 'Arroyomolinos', 'price']\n",
+    "\n",
+    "df.loc[df['level5'] == 'Gatefe']\n",
     "#sum_price = df.loc[df['level5'] == 'Arroyomolinos (Madrid)'].sum\n",
     "#total = sum_price/df.loc[df['level5'] == 'Arroyomolinos (Madrid)', 'price'].count()\n",
     "#f'{total:.2f}€'"
